--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "rust-analyzer.checkOnSave": false,
+    "rust-analyzer.checkOnSave.allTargets": false,
     "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf"
 }
