添加彩色输出

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
     "rust-analyzer.checkOnSave.allTargets": false,
-    "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf"
+    "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf",
+    "cSpell.words": [
+        "ebss",
+        "edata",
+        "erodata",
+        "etext",
+        "sbss",
+        "sdata",
+        "srodata",
+        "stext"
+    ]
 }
