--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -10,3 +10,6 @@ debug = true
 
 [dependencies]
 sbi-spec = "0.0.5"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+riscv = { version = "0.10.1" }
+bit_field = "0.10.0"
