--- a/user/Makefile
+++ b/user/Makefile
@@ -13,9 +13,14 @@ OBJDUMP := rust-objdump --arch-name=riscv64
 OBJCOPY := rust-objcopy --binary-architecture=riscv64
 
 elf:
-		@cargo build --release
+		@echo build elfs
+		@python3 build.py
 
-binary: elf
+binary:
+		@echo strip metadata
 		@$(foreach elf, $(ELFS), $(OBJCOPY) $(elf) --strip-all -O binary $(patsubst $(TARGET_DIR)/%, $(TARGET_DIR)/%.bin, $(elf));)
 
-build: 	binary
+build: elf binary
+
+clean:
+	@cargo clean
