--- a/os/Makefile
+++ b/os/Makefile
@@ -22,7 +22,7 @@ QEMU_ARGS := -machine virt \
 	-bios $(BOOTLOADER) \
 	-device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY)
 
-build: env $(KERNEL_BIN)
+build: $(KERNEL_BIN)
 
 env:
 	@echo Install dependencies
@@ -61,6 +61,7 @@ gdbclient:
 	@riscv64-unknown-elf-gdb \
 		-ex "file $(KERNEL_ELF)" \
 		-ex "set arch riscv:rv64" \
+		-ex "b src/task/mod.rs:171" \
 		-ex "target remote localhost:1234"
 
 nm:
