--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -14,3 +14,5 @@ lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 riscv = { version = "0.10.1" }
 bit_field = "0.10.0"
 spin = "0.5.2"
+buddy_system_allocator = "0.6"
+bitflags = "1.2.1"
