修改user程序命令

--- a/user/Makefile
+++ b/user/Makefile
@@ -4,23 +4,18 @@ APP_DIR := src/bin
 TARGET_DIR := target/$(TARGET)/$(MODE)
 # 获取所有 src/bin 下面所有的 *.rs 列表
 APPS := $(wildcard $(APP_DIR)/*.rs)
+
+APP_NAMES := $(patsubst $(APP_DIR)/%.rs, %, $(APPS))
 # elfs的名字列表
-ELFS := $(patsubst $(APP_DIR)/%.rs, $(TARGET_DIR)/%, $(APPS))
+# ELFS := $(patsubst $(APP_DIR)/%.rs, $(TARGET_DIR)/%, $(APPS))
 # .bin的名字列表
 # BINS := $(patsubst $(APP_DIR)/%.rs, $(TARGET_DIR)/%.bin, $(APPS))
 
-OBJDUMP := rust-objdump --arch-name=riscv64
-OBJCOPY := rust-objcopy --binary-architecture=riscv64
+# OBJDUMP := rust-objdump --arch-name=riscv64
+# OBJCOPY := rust-objcopy --binary-architecture=riscv64
 
-elf:
-		@echo build elfs
-		@python3 build.py
-
-binary:
-		@echo strip metadata
-		@$(foreach elf, $(ELFS), $(OBJCOPY) $(elf) --strip-all -O binary $(patsubst $(TARGET_DIR)/%, $(TARGET_DIR)/%.bin, $(elf));)
-
-build: elf binary
+build:
+	@$(foreach app, $(APP_NAMES), cargo build --bin $(app) --release;)
 
 clean:
 	@cargo clean
