暂存ch5的提交

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,39 @@
     "rust-analyzer.checkOnSave.allTargets": false,
     "rust-analyzer.cargo.target": "riscv64gc-unknown-none-elf",
     "cSpell.words": [
+        "addi",
+        "bitflags",
+        "dealloc",
         "ebss",
+        "ecall",
         "edata",
+        "ekernel",
         "erodata",
         "etext",
+        "getchar",
+        "initproc",
+        "inlateout",
+        "PAGEOFFSET",
+        "PAGETABLE",
+        "riscv",
+        "satp",
         "sbss",
+        "scause",
         "sdata",
+        "sepc",
+        "sfence",
         "srodata",
-        "stext"
+        "sstatus",
+        "stext",
+        "stimer",
+        "strampoline",
+        "stval",
+        "stvec",
+        "syscall",
+        "unmap",
+        "usec",
+        "ustatus",
+        "Virt",
+        "waitpid"
     ]
 }
